--- a/prometheus.yml
+++ b/prometheus.yml
@@ -25,7 +25,7 @@ scrape_configs:
     scrape_interval: 5s
 
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['host.docker.internal:9090']
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
 
