--- a/prometheus.yml
+++ b/prometheus.yml
@@ -43,7 +43,7 @@ scrape_configs:
   - job_name: 'eureka'
     eureka_sd_configs:
     #Specify Eureka's service discovery address
-      - server: 'http://host.docker.internal:10001/eureka'
+      - server: 'http://172.17.0.1:10001/eureka'
     relabel_configs:
    #Path to rewrite metrics
       - source_labels: ["__meta_eureka_app_instance_metadata_prometheus_path"]
